# carpet-crm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_order.py
alembic/: env.py
alembic/versions/: a79700e4108b_create_clients_and_orders_tables.py
src/carpet_crm/ai/: agent.py  tools.py
src/carpet_crm/bot/: main.py  permissions.py
src/carpet_crm/bot/handlers/: employee.py
src/carpet_crm/core/: config.py
src/carpet_crm/db/: base.py  enums.py  models.py  session.py
src/carpet_crm/repositories/: client_repository.py  order_repository.py
src/carpet_crm/schemas/: order.py
src/carpet_crm/services/: order_service.py
tests/: conftest.py
tests/integration/: test_order_service.py  test_repositories.py
tests/unit/: test_agent.py  test_config.py  test_employee_handler.py  test_order_schema.py  test_permissions.py
