[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carpet_crm"]

[project]
name = "carpet-crm"
version = "0.1.0"
description = "AI-powered CRM для управления заказами мойки ковров"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiogram>=3.13.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

# ---------------------------------------------------------------------------
# Ruff — линтер и форматтер (заменяет flake8 + black + isort одним инструментом)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP8)
    "W",   # pycodestyle warnings
    "F",   # pyflakes (неиспользуемые импорты, переменные)
    "I",   # isort (порядок импортов)
    "N",   # pep8-naming (имена классов/функций по конвенции)
    "UP",  # pyupgrade (современный синтаксис Python)
    "B",   # flake8-bugbear (частые ошибки и антипаттерны)
    "ASYNC", # проверки для async-кода
]
ignore = ["E501"]  # длину строки не дублируем — ruff format сам её держит

[tool.ruff.lint.isort]
known-first-party = ["carpet_crm"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
